--- a/index.html
+++ b/index.html
@@ -254,11 +254,11 @@
           break;
         case 'instagram':
           targetInput.placeholder = 'Masukkan username Instagram target';
-          targetInput.type = 'email'; // samakan tipe jadi email untuk konsisten style
+          targetInput.type = 'email'; // samakan tipe jadi email
           break;
         case 'x':
           targetInput.placeholder = 'Masukkan username X target';
-          targetInput.type = 'email'; // samakan tipe jadi email untuk konsisten style
+          targetInput.type = 'email'; // samakan tipe jadi email
           break;
       }
       targetInput.value = '';
@@ -304,27 +304,7 @@
       if (attemptsLeft <= 0) return;
 
       const target = targetInput.value.trim();
-      const targetType = targetTypeSelect.value;
-
-      if (!target) {
-        alert('Target tidak boleh kosong!');
-        return;
-      }
-
-      if (targetType === 'email') {
-        // validasi sederhana email
-        const emailPattern = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
-        if (!emailPattern.test(target)) {
-          alert('Format email tidak valid!');
-          return;
-        }
-      } else {
-        // untuk Instagram & X, jangan ada '@' di input
-        if (target.includes('@')) {
-          alert('Username Instagram/X tidak boleh mengandung karakter "@"');
-          return;
-        }
-      }
+      if (!target) return;
 
       loadingContainer.style.display = 'block';
       resultContainer.style.display = 'none';
@@ -332,6 +312,7 @@
       progressPercent.textContent = '0%';
 
       // Messages based on target type
+      const targetType = targetTypeSelect.value;
       const baseMsgs = [
         'Menghubungkan ke server target...',
         'Akses diterima.',
@@ -341,6 +322,7 @@
         'Menampilkan hasil...'
       ];
       let messages = baseMsgs.map(msg => msg);
+      // Customize message 2nd line based on target type
       switch(targetType) {
         case 'email':
           messages[1] = 'Akses email target diterima.';
@@ -353,6 +335,7 @@
           break;
       }
 
+      // Start terminal logs + progress bar simultaneously
       showTerminalLogs(messages);
 
       let duration = 30000;
